<resources>
    <string name="app_name">M-Hike</string>

    <!--    Text View-->
    <string name="tv_name">Name</string>
    <string name="tv_location">Location</string>
    <string name="tv_date">Date</string>
    <string name="tv_parking_available">Parking</string>
    <string name="tv_length">Length</string>
    <string name="tv_difficulty">Difficulty</string>
    <string name="tv_description">Description (Optional)</string>
    <string name="tv_completion">Completed</string>
    <string name="tv_edit">Edit</string>

    <string name="tv_asterisk">*</string>

    <string name="tv_observation">Observation</string>
    <string name="tv_type">Type</string>

    <!--    Title-->
    <string name="title_homepage">Homepage</string>
    <string name="title_hikes">Hikes</string>
    <string name="title_hike_input">Enter Hike below</string>
    <string name="title_delete_hike">Delete Hike</string>

    <string name="title_observation_input">Enter Observation below</string>
    <string name="title_observation_delete">Delete Observation</string>

    <!--    Buttons-->
    <string name="btn_hike">Hike</string>
    <string name="btn_observation">Observation</string>
    <string name="btn_favorite">Favorite</string>
    <string name="btn_manage">Manage</string>
    <string name="btn_search">Search</string>

    <string name="btn_add">New</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <!--    Hints-->
    <string name="hint_name">Snowdon, Trosley Country park</string>
    <string name="hint_location">London, Leeds</string>
    <string name="hint_date"> DD/MM/YYYY</string>
    <string name="hint_length">1.0 , 2.1 (Km)</string>
    <string name="hint_description">Description</string>

    <string name="hint_observation">A cute fox</string>
    <string name="hint_observation_count">observation_count</string>

    <string name="hint_search">Search</string>

    <!--    Message-->
    <string name="msg_mandatory_fields">Please fill all mandatory fields</string>
    <string name="msg_delete_hike_confirmation">Are you sure to delete </string>
    <string name="msg_new_hike">New hike has created successfully</string>
    <string name="msg_new_observation">New observation has created successfully</string>

    <!--    Arrays-->
    <string-array name="difficulties_list">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>

    <string-array name="observation_types_list">
        <item>Animal</item>
        <item>Scenery</item>
        <item>Trails Condition</item>
        <item>Vegetation</item>
        <item>Weather</item>
        <item>Others</item>
    </string-array>
</resources>