<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditHikeActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/title_input"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_name"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="62dp" />

                <TextView
                    style="@style/MandatoryAsterisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_asterisk" />
            </LinearLayout>



            <EditText
                android:id="@+id/input_edit_name"
                android:layout_width="393dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="text"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="82dp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_location"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="144dp" />

            <EditText
                android:id="@+id/input_edit_location"
                android:layout_width="393dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/hint_location"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="163dp" />

            <TextView
                android:id="@+id/tv_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_date"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="224dp" />

            <EditText
                android:id="@+id/input_edit_date"
                android:layout_width="393dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/hint_date"
                android:inputType="date"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="244dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_length"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="309dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_edit_length"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/hint_length"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="326dp" />

                <CheckBox
                    android:id="@+id/cb_edit_parking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_parking_available"
                    tools:layout_editor_absoluteX="231dp"
                    tools:layout_editor_absoluteY="328dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_difficulty"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="385dp" />

            <Spinner
                android:id="@+id/spinner_edit_difficulty"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/difficulties_list"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="414dp" />

            <CheckBox
                android:id="@+id/cb_edit_completion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_completion" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tv_description"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="488dp" />


            <EditText
                android:id="@+id/input_edit_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="522dp" />

            <Button
                android:id="@+id/btn_save_hike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center"
                android:onClick="clickSaveEditButton"
                android:text="@string/btn_save"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="763dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>