<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHikeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="100dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/title_input"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="796dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="64dp">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="83dp" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="112dp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_location"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="183dp" />

            <EditText
                android:id="@+id/input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="212dp" />

            <TextView
                android:id="@+id/tv_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="279dp" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>